Fix margin spacing

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ ul {
 
 .category-container {
     display: flex;
-    margin-top: 15px;
+    margin-top: 20px;
 }
 
 .category {
@@ -36,7 +36,7 @@ i {
 }
 
 .category-title {
-    margin: 0 0 5px 0;
+    margin: 0 0 0 5px;
 }
 
 a {
